# reorient_planning

./: .gitignore  CMakeLists.txt  acados_ocp.json  acados_ocp_reorient_model.json  package.xml
c_generated_code/: Makefile  acados_sim_solver_zyxEuler_kinematics.c  acados_sim_solver_zyxEuler_kinematics.h  acados_solver.pxd  acados_solver_zyxEuler_kinematics.c  acados_solver_zyxEuler_kinematics.h  main_sim_zyxEuler_kinematics.c  main_zyxEuler_kinematics.c
c_generated_code/reorient_plan_model/: reorient_plan_expl_ode_fun.c  reorient_plan_expl_vde_adj.c  reorient_plan_expl_vde_forw.c
c_generated_code/zyxEuler_kinematics_constraints/: zyxEuler_kinematics_constr_h_e_fun.c  zyxEuler_kinematics_constr_h_e_fun_jac_uxt_zt.c  zyxEuler_kinematics_constraints.h
c_generated_code/zyxEuler_kinematics_cost/: zyxEuler_kinematics_cost.h  zyxEuler_kinematics_cost_ext_cost_0_fun.c  zyxEuler_kinematics_cost_ext_cost_0_fun_jac.c  zyxEuler_kinematics_cost_ext_cost_0_fun_jac_hess.c  zyxEuler_kinematics_cost_ext_cost_e_fun.c  zyxEuler_kinematics_cost_ext_cost_e_fun_jac.c  zyxEuler_kinematics_cost_ext_cost_e_fun_jac_hess.c  zyxEuler_kinematics_cost_ext_cost_fun.c  zyxEuler_kinematics_cost_ext_cost_fun_jac.c  zyxEuler_kinematics_cost_ext_cost_fun_jac_hess.c
c_generated_code/zyxEuler_kinematics_model/: zyxEuler_kinematics_expl_ode_fun.c  zyxEuler_kinematics_expl_vde_adj.c  zyxEuler_kinematics_expl_vde_forw.c  zyxEuler_kinematics_model.h
msg/: compt_time.msg  opti_variable.msg
scripts/: main.py  math_lib.py  reorient_planning.py  test.py
scripts_acados/: acados_ocp_reorient_model.json  main.py  main_v2.py  math_lib.py  param.py  plot_result.py  plot_result_v2.py  reorient_planner.py  reorient_planner_v2.py  reorient_planning.py  reorient_planning_v2.py  ros_main.py  simple_pub.py  simple_sub.py  test.py
scripts_casadi/: main.py  reorient_planning.py  test.py
