<?xml version="1.0"?>
<package format="2">
  <name>reorient_planning</name>
  <version>0.0.0</version>
  <description>The reorient_planning package</description>

  <maintainer email="ehdwo713@snu.ac.kr">dj</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend> Eigen3 </depend>
  <depend> roscpp </depend>
  <depend> nav_msgs </depend>
  <depend> geometry_msgs </depend>
  <depend> rospy </depend>

</package>
